# winrt-fd-sample

./: .gitignore  README.md
cppwrl/: FaceAnalysisCppSample.cpp  FaceAnalysisCppSample.sln  FaceAnalysisCppSample.vcxproj  FaceAnalysisCppSample.vcxproj.filters
python/: detect.py  requirements.txt
rust/: Cargo.toml  detect.rs
