[package]
name = "face_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows] 
version = "0.43.0"
features = [
    "Foundation_Collections",
    "Media_FaceAnalysis",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams"
]

[[bin]]
name = "detect"
path = "./detect.rs"
